--- a/.github/workflows/arduino_cli.yaml
+++ b/.github/workflows/arduino_cli.yaml
@@ -22,7 +22,7 @@ jobs:
           arduino-cli config set library.enable_unsafe_install true
           arduino-cli core update-index
           arduino-cli core install esp32:esp32@3.2.0
-          arduino-cli lib install GCMEnryption
+          arduino-cli lib install GCMEncryption
           arduino-cli lib install ieee-802_15_4
           arduino-cli lib install ieee-802_15_4-network-shared
 
