Try using specific idf: defines

--- a/.github/workflows/platformio.yaml
+++ b/.github/workflows/platformio.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         target:
-          - path: examples/espidf/sleeping_node/main/main.cpp
+          - path: examples/espidf/sleeping_node
             library: library.json
             remove: ""
             extra_dependencies: ""
@@ -49,8 +49,14 @@ jobs:
         run: mv ${{ matrix.target.library }} ./ || true
         if: ${{ matrix.target.library != './library.json' }}
 
+      - name: Copy specific platformio CmakeLists to CMakeLists.txt
+        run: |
+          if [ -f "${{ matrix.target.path }}/CMakeLists.platformio" ]; then
+            mv ${{ matrix.target.path }}/CMakeLists.platformio ${{ matrix.target.path }}/CMakeLists.txt
+          fi
+
       - name: Build PlatformIO targets
         run: ${{ env.PLATFORMIO_CI_BASE_CMD }} --project-option="lib_deps=${{ matrix.target.extra_dependencies }}"
         env:
           PLATFORMIO_CI_BASE_CMD: pio ci --lib="." --board=esp32-c6-devkitc-1 --project-option="build_unflags=-std=gnu++11" --project-option="build_flags=-std=gnu++17" --project-option="platform=espressif32@6.10.0" --project-option="lib_ldf_mode=deep" --project-option="framework=espidf"
-          PLATFORMIO_CI_SRC: ${{ matrix.target.path }}
+          PLATFORMIO_CI_SRC: ${{ matrix.target.path }}/main/main.cpp
