--- a/.github/workflows/platformio.yaml
+++ b/.github/workflows/platformio.yaml
@@ -38,8 +38,14 @@ jobs:
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
 
+      - name: PlatformIO ESP-IDF shenanigans, idf_component.yaml
+        run: cp idf_component.yaml ${{ matrix.target.path }}/main/idf_component.yaml
+
+      - name: PlatformIO ESP-IDF shenanigans, partitions_with_ota.csv
+        run: cp ${{ matrix.target.path }}/partitions_with_ota.csv ${{ matrix.target.path }}/main/partitions_with_ota.csv
+
       - name: Build PlatformIO targets
         run: ${{ env.PLATFORMIO_CI_BASE_CMD }}
         env:
-          PLATFORMIO_CI_BASE_CMD: pio ci --lib="." --board=esp32-c6-devkitc-1 --project-option="build_unflags=-std=gnu++11" --project-option="build_flags=-std=gnu++17" --project-option="platform=espressif32@6.10.0" --project-option="lib_ldf_mode=deep" --project-option="framework=espidf"
-          PLATFORMIO_CI_SRC: ${{ matrix.target.path }}/main/main.cpp
+          PLATFORMIO_CI_BASE_CMD: pio ci --lib="." --board=esp32-c6-devkitc-1 --project-option="build_unflags=-std=gnu++11" --project-option="build_flags=-std=gnu++17" --project-option="platform=espressif32@6.10.0" --project-option="lib_ldf_mode=deep" --project-option="framework=espidf" --project-option="board_build.partitions = src/partitions_with_ota.csv"
+          PLATFORMIO_CI_SRC: ${{ matrix.target.path }}/main/
