--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 FILE(GLOB_RECURSE sources "./src/impl/*.*")
 
-set(required_components nvs_flash)
+set(required_components nvs_flash app_update)
 
 idf_component_register(COMPONENT_NAME "ieee-802_15_4-network-node"
                         SRCS ${sources}
